--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -29,8 +29,9 @@ body {
 
 /* Imagen Circular */
 #header img {
-  width: 60%;
+  width: 50%;
   border-radius: 50%;
+  object-fit: scale-down; max-width: 100%
 }
 
 /* Texto Encabezado */
@@ -41,7 +42,7 @@ body {
 
 /* Subtexto Encabezado */
 .subheader-text {
-  font-size: 4em;
+  font-size: 3.5em;
 }
 
 /* Estilo color nombre */
@@ -56,7 +57,7 @@ body {
   background-color: #14143c;
 }
 
-/* Imagen Circular */
+/* Imagen Circular Acerca */
 #about img {
   border-radius: 50%;
 }
